crates/aranya-policy-compiler/tests/data/commands/recall_in_recall_invalid_context.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
9 |         check true else recall foo()
  |                         ^^^^^^^^^^^^ `recall` is only valid in command `policy` blocks
